--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
-    "dependencies": {
-        "@apidevtools/json-schema-ref-parser": "^11.6.4",
-        "@apidevtools/swagger-parser": "^10.1.0"
-    },
-    "devDependencies": {
-        "@types/node": "^20.14.10",
-        "typescript": "^5.4.5"
-    },
-    "scripts": {
-        "gen:json": "npx tsx scripts/generate-json.ts"
-    }
+  "dependencies": {
+    "@apidevtools/json-schema-ref-parser": "^11.6.4",
+    "@apidevtools/swagger-parser": "^10.1.0"
+  },
+  "devDependencies": {
+    "@types/node": "^20.14.10",
+    "husky": "^9.0.11",
+    "typescript": "^5.4.5"
+  },
+  "scripts": {
+    "gen:json": "npx tsx scripts/generate-json.ts",
+    "prepare": "husky"
+  }
 }
