feat: rename projectId to projectIdOrName in write API

--- a/api/write.yaml
+++ b/api/write.yaml
@@ -5,13 +5,13 @@ info:
 servers:
   - url: https://write.withampersand.com/v1
 paths:
-  /projects/{projectId}/integrations/{integrationId}/objects/{objectName}:
+  /projects/{projectIdOrName}/integrations/{integrationId}/objects/{objectName}:
     post:
       summary: Create, update, upsert or delete records
       operationId: writeRecords
       tags: ["Write"]
       parameters:
-        - name: projectId
+        - name: projectIdOrName
           in: path
           required: true
           schema:
