--- a/api/api.yaml
+++ b/api/api.yaml
@@ -1,6 +1,6 @@
 openapi: 3.0.1
 info:
-  title: Ampersand public API
+  title: Ampersand platform API
   version: 1.0.0
 servers:
   - url: https://api.withampersand.com/v1
