--- a/.github/workflows/trigger-docs-gen.yml
+++ b/.github/workflows/trigger-docs-gen.yml
@@ -27,4 +27,4 @@ jobs:
             -H "Authorization: Bearer ${{ secrets.AMPERSAND_OPS_PAT }}" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
             https://api.github.com/repos/$repo_owner/$repo_name/dispatches \
-            -d "{\"event_type\": \"$event_type\"}}"
+            -d "{\"event_type\": \"$event_type\"}"
