--- a/package.json
+++ b/package.json
@@ -11,5 +11,11 @@
   "scripts": {
     "gen:json": "npx tsx scripts/generate-json.ts",
     "prepare": "husky"
-  }
+  },
+  "engines": {
+      "node": "20.15.1",
+      "pnpm": "9.6.0"
+  },
+  "packageManager": "pnpm@9.6.0"
+  
 }
