--- a/package.json
+++ b/package.json
@@ -13,9 +13,7 @@
     "prepare": "husky"
   },
   "engines": {
-      "node": "20.15.1",
-      "pnpm": "9.6.0"
+      "pnpm": "^9.6.0"
   },
-  "packageManager": "pnpm@9.6.0"
-  
+  "packageManager": "pnpm@9.6.0+"
 }
