--- a/catalog/catalog.yaml
+++ b/catalog/catalog.yaml
@@ -79,7 +79,30 @@ components:
           x-go-type-skip-optional-pointer: true
 
     Media:
+      properties:
+        regular:
+          $ref: '#/components/schemas/MediaTypeRegular'
+        darkMode:
+          $ref: '#/components/schemas/MediaTypeDarkMode'
+
+    MediaTypeDarkMode:
       type: object
+      description: Media to be used in dark mode.
+      properties:
+        iconURL:
+          type: string
+          example: https://example.com/icon.png
+          description: URL to the icon for the provider that is to be used in dark mode.
+          x-go-type-skip-optional-pointer: true
+        logoURL:
+          type: string
+          example: https://example.com/logo.png
+          description: URL to the logo for the provider that is to be used in dark mode.
+          x-go-type-skip-optional-pointer: true
+
+    MediaTypeRegular:
+      type: object
+      description: Media for light/regular mode.
       properties:
         iconURL:
           type: string
