--- a/catalog/catalog.yaml
+++ b/catalog/catalog.yaml
@@ -155,7 +155,6 @@ components:
           description: A list of URLs that represent the audience for the token, which is needed for some client credential grant flows.
           x-go-type-skip-optional-pointer: true
         tokenMetadataFields:
-          description: Fields to be used to extract token metadata from the token response.
           $ref: '#/components/schemas/TokenMetadataFields'
         docsURL:
           type: string
@@ -184,10 +183,8 @@ components:
           x-oapi-codegen-extra-tags:
             validate: required
         query:
-          description: Configuration for API key in query parameter. Must be provided if type is in-query.
           $ref: '#/components/schemas/ApiKeyOptsQuery'
         header:
-          description: Configuration for API key in header. Must be provided if type is in-header.
           $ref: '#/components/schemas/ApiKeyOptsHeader'
         docsURL:
           type: string
@@ -289,6 +286,21 @@ components:
           x-go-type-skip-optional-pointer: true
         media:
           $ref: '#/components/schemas/Media'
+
+    CatalogDescriptor:
+      type: object
+      required:
+        - timestamp
+        - catalog
+      properties:
+        timestamp:
+          type: string
+          example: 2024-07-30T15:14:51-07:00
+          description: An RFC3339 formatted timestamp of when the catalog was generated.
+          x-oapi-codegen-extra-tags:
+            validate: required
+        catalog:
+          $ref: '#/components/schemas/CatalogType'
 
     CatalogType:
       type: object
