hydrated revision also missed backfill config

--- a/manifest/manifest.yaml
+++ b/manifest/manifest.yaml
@@ -183,6 +183,8 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/HydratedIntegrationField'
+        backfill:
+          $ref: '#/components/schemas/Backfill'
 
     # We might end up using the same HydratedIntegrationObject type for both read and write,
     # but for now we're introducing a new type to keep them separate, and not renaming the
