--- a/catalog/catalog.yaml
+++ b/catalog/catalog.yaml
@@ -226,6 +226,16 @@ components:
       type: object
       description: Configuration for Basic Auth. Optional.
       properties:
+        apiKeyLike:
+          type: boolean
+          example: true
+          description: If true, the provider uses an API key which then gets encoded as a basic auth user:pass string.
+          x-go-type-skip-optional-pointer: true
+        apiKeyFormat:
+          type: string
+          example: "api:%s"
+          description: How to transform the API key in to a basic auth user:pass string. The %s is replaced with the API key value.
+          x-go-type-skip-optional-pointer: true
         docsURL:
           type: string
           description: URL with more information about how to get or use an API key.
