--- a/catalog/catalog.yaml
+++ b/catalog/catalog.yaml
@@ -242,7 +242,7 @@ components:
       type: object
       description: Configuration for Basic Auth. Optional.
       properties:
-        apiKeyLike:
+        apiKeyAsBasic:
           type: boolean
           example: true
           description: If true, the provider uses an API key which then gets encoded as a basic auth user:pass string.
