--- a/catalog/catalog.yaml
+++ b/catalog/catalog.yaml
@@ -116,14 +116,9 @@ components:
           description: URL to the logo for the provider.
           x-go-type-skip-optional-pointer: true
     
-    Metadata:
+    Labels:
       type: object
       additionalProperties:
-        type: string
-
-    Tags:
-      type: array
-      items:
         type: string
 
     Oauth2Opts:
@@ -322,11 +317,9 @@ components:
           x-go-type-skip-optional-pointer: true
         media:
           $ref: '#/components/schemas/Media'
-        metadata:
-          $ref: '#/components/schemas/Metadata'
-        tags:
-          $ref: '#/components/schemas/Tags'
-
+        labels:
+          $ref: '#/components/schemas/Labels'
+          
     CatalogWrapper:
       type: object
       required:
