Soureyaml to Create Integration and Update Revision (#46)
* integration from source yaml

* Update api/api.yaml

Co-authored-by: Lauren Long <laurenzlong@users.noreply.github.com>

* Update api/api.yaml

Co-authored-by: Lauren Long <laurenzlong@users.noreply.github.com>

* update description

---------

Co-authored-by: Lauren Long <laurenzlong@users.noreply.github.com>

--- a/api/api.yaml
+++ b/api/api.yaml
@@ -540,8 +540,6 @@ paths:
                   type: string
                   description: The provider name (e.g. "salesforce", "hubspot")
                 latestRevision:
-                  required:
-                    - sourceZipUrl
                   type: object
                   properties:
                     sourceZipUrl:
@@ -549,9 +547,14 @@ paths:
                       description:
                         URL of where a zip of the source files can be downloaded
                         (e.g. Google Cloud Storage URL).
+                    sourceYaml:
+                      type: string
+                      description:
+                        A YAML string that defines the integration.
                   description:
                     If included, creating this integration will also create
-                    a new revision of the integration.
+                    a new revision of the integration. For LatestRevision, one of souceZipUrl or
+                    sourceYaml is required.
         required: true
       responses:
         201:
@@ -628,8 +631,6 @@ paths:
         content:
           application/json:
             schema:
-              required:
-                - sourceZipUrl
               type: object
               properties:
                 sourceZipUrl:
@@ -637,6 +638,12 @@ paths:
                   description:
                     URL of where a zip of the source files can be downloaded
                     (e.g. Google Cloud Storage URL).
+                sourceYaml:
+                  type: string
+                  description:
+                    A YAML string that defines the integrations.
+              description:
+                The source of the integrations to upsert. One of sourceZipUrl or sourceYaml is required.
       responses:
         200:
           description: Upserted integrations.
@@ -678,8 +685,6 @@ paths:
         content:
           application/json:
             schema:
-              required:
-                - sourceZipUrl
               type: object
               properties:
                 sourceZipUrl:
@@ -687,6 +692,12 @@ paths:
                   description:
                     URL of where a zip of the source files can be downloaded
                     (e.g. Google Cloud Storage URL).
+                sourceYaml:
+                  type: string
+                  description:
+                    The source YAML file that defines the revision.
+              description:
+                The source of the revision to create. One of sourceZipUrl or sourceYaml is required.
       responses:
         201:
           description: Created
