--- a/api/api.yaml
+++ b/api/api.yaml
@@ -531,6 +531,7 @@ paths:
               required:
                 - name
                 - provider
+                - latestRevision
               type: object
               properties:
                 name:
